2007-08-07  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.c:
	Added new -e option to edit scripts in-place.
	* export.c:
	Added new -D option to set deleted status on messages.
	* main.c, user.c:
	Cleaned up the help text a little bit.
	* modules/sortsieve.c:
	Accepted modified version of patch for bug #632.

2007-07-28  Paul J Stevens <paul@nfg.nl>

	* db.c, db.h, maintenance.c:
	add missing integrity check (bug #305)
	* serverchild.c:
	fix trivial compiler warning

2007-07-27  Aaron Stone  <aaron@serendipity.cx>

	* imapcommands.c:
	Accepted patch from Jonathan Fealy to allow unsubscribe from
	nonexistent mailboxes.

2007-07-26  Paul J Stevens <paul@nfg.nl>

	* sql/mysql/create_tables.mysql, sql/postgresql/create_tables.pgsql, 
	sql/sqlite/create_tables.sqlite:
	add missing indexes

2007-07-22  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	update client state after authentication
	* pool.c:
	retry locking before logging an error
	* serverchild.c:
	final selfpipe mod
	* dbmail-imapsession.c, dbmail-imapsession.h, 
	test-scripts/testimap.py:
	speedup fetch by buffering output

2007-07-21  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, imap4.c:
	login_/timeout cleanup
	* dbmail.h.in:
	GETCONFIGVALUE trimmed
	* serverchild.c:
	selfPipe modification

2007-07-19  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	do not add x-dbmail-physmessage-id header during retrieval

2007-07-16  Aaron Stone  <aaron@serendipity.cx>

	* export.c, man/dbmail-export.txt:
	Require the -u argument, add support for wildcards.

2007-07-15  Paul J Stevens <paul@nfg.nl>

	* modules/authldap.c:
	use sigaction instead of signal in ldap code

2007-07-14  Paul Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.6-rc1

2007-07-12  Aaron Stone  <aaron@serendipity.cx>

	* export.c, man/dbmail-export.txt:
	New options: -b basedir, -r recursive.
	* dbmail-mailbox.c:
	Tell GMime that it does not own the dbmail_mailbox_dump file pointer.