@@ -1,3 +1,8 @@
+2007-08-13  Aaron Stone  <aaron@serendipity.cx>
+
+	* modules/sortsieve.c:
+	More testing and better debugging on fix for bug #632.
+
 2007-08-07  Aaron Stone  <aaron@serendipity.cx>
 
 	* sievecmd.c:
